horizontal overflow fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@ body {
     #018436 71.09%,
     #018436 100%
   );
+  width: 100vw;
   background-repeat: no-repeat;
   overflow-x: hidden;
 }
